Sign up page update and HomePage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
-<resources>
+<resources><string name="sign_up">
+        Sign up
+    </string>
     <string name="app_name">CODE_RED_09</string>
 </resources>
